# iwgtk

./: .gitignore  CHANGELOG  CONTRIBUTING.md  Makefile  README.md  TODO  adapter.c  adhoc.h  ap.c  ap.h  dialog.c  icons.gresource.xml  iwgtk.1  iwgtk.desktop  iwgtk.service  main.c  main.h  meson.build  network.c  network.h  station.c  station.h  switch.h  utilities.c  utilities.h  wps.h
misc/: iwgtk-indicator.desktop  iwgtk.1  iwgtk.1.scd  iwgtk.5.scd  iwgtk.conf  iwgtk.desktop  iwgtk.service
po/: .gitignore  POTFILES  meson.build
src/: adapter.c  adapter.h  adhoc.c  adhoc.h  agent.c  agent.h  ap.c  ap.h  device.c  device.h  diagnostic.c  diagnostic.h  dialog.c  dialog.h  dpp.c  dpp.h  hidden.c  hidden.h  icon.c  icon.h  indicator.c  indicator.h  iwgtk.h  known_network.c  known_network.h  main.c  main.h  meson.build  network.c  network.h  objects.c  objects.h  sni.c  sni.h  station.c  station.h  switch.c  switch.h  utilities.c  utilities.h  (+4 more)
